# tract_algebra

./: Cargo.toml  README.md
src/: absolute_value_tract.rs  baker_tract.rs  binomial_edge_ideal.rs  field_tract.rs  krasner.rs  lib.rs  linear_combination.rs  main.rs  phase_tract.rs  regular_partial_field.rs  tract_grassmannian.rs  tract_projective_variety.rs  tropical_tract.rs
