[package]
name = "tract_algebra"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A Rust library for algebraic structures called tracts, which generalize fields and hyperfields."
repository = "https://github.com/Cobord/tract_algebra"

[dev-dependencies]
proptest = "1"

[dependencies]
itertools = "0.14.0"
thiserror = "2"
ordered-float = "4"
nalgebra = "0.34.1"
num = "0.4.3"
